--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -5,24 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity"
+    android:background="@drawable/background_mobile">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
-
-        <TextView
-            android:background="@color/colorAccent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/app_name"
-            android:gravity="center"
-            android:textSize="45dp"
-            android:textStyle="bold"></TextView>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Phụ huynh" />
+
 </RadioGroup>
 
     </LinearLayout>
@@ -87,15 +79,29 @@
             android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:gravity="right"
+
             android:text="Mật Khẩu :"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edtPass"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center">
+    <TextView
+        android:id="@+id/tvError"
+        android:textColor="@color/colorRed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
 
+        ></TextView>
+</LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
