chỉnh sữa code layout menu listview

--- a/app/src/main/res/layout/activity_giang_vien.xml
+++ b/app/src/main/res/layout/activity_giang_vien.xml
@@ -4,24 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.slideshow.LopActivity"
-    android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:orientation="vertical"
-    >
+    tools:context=".GiangVienActivity">
+
     <TextView
-        android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:text="Thông tin sinh viên"
-        android:textStyle="bold"
-        />
+        android:textSize="24dp"
+        android:textStyle="bold" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/lvSinhVien"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
 
+    </LinearLayout>
 </LinearLayout>
