--- a/app/src/main/res/layout/activity_sinh_vien.xml
+++ b/app/src/main/res/layout/activity_sinh_vien.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
         android:gravity="center"
+        android:textSize="24dp"
         android:text="Thông tin sinh viên"
         android:textStyle="bold" />
 
@@ -19,11 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <ListView
-            android:id="@+id/lvSV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
     </LinearLayout>
 
 </LinearLayout>
