--- a/app/src/main/res/layout/activity_phu_huynh.xml
+++ b/app/src/main/res/layout/activity_phu_huynh.xml
@@ -13,17 +13,18 @@
         android:background="@color/colorAccent"
         android:gravity="center"
         android:text="Thông tin sinh viên"
+        android:textSize="24dp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <ListView
-            android:id="@+id/lvPhuHuynh"
+            android:id="@+id/lvSinhVien"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>
+
     </LinearLayout>
 
 </LinearLayout>
