--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorRed">#D8312E</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlue">#3AC5FF</color>
 
 </resources>
