--- a/app/src/main/res/layout/dialog_themlop.xml
+++ b/app/src/main/res/layout/dialog_themlop.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -29,7 +30,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/edtLop"
+                android:id="@+id/editTextLop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
