--- a/app/src/main/res/layout/item_cn.xml
+++ b/app/src/main/res/layout/item_cn.xml
@@ -3,18 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tvCN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-
-        <TextView
-            android:id="@+id/tvKhoa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginRight="20dp"
-            android:layout_weight="9"
-            android:gravity="center_horizontal"
-            android:text="TextView"
-            android:textColor="#0099FF" />
+        android:layout_marginRight="20dp"
+        android:layout_weight="9"
+        android:gravity="center_horizontal"
+        android:text="TextView"
+        android:textColor="#0099FF" />
 
     <ImageView
         android:id="@+id/imvHinh"
@@ -24,6 +22,4 @@
 
         android:layout_weight="1"
         android:src="@drawable/ic_baseline_more_vert_24" />
-
-
 </LinearLayout>
